# devenv-devcontainer-setup

./: .gitignore  .pre-commit-config.yaml  NOTICE.md  README.md  manifest.json  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: onCreateCommand.sh
.github/actions/update-velocitas-json/: action.yml
.github/workflows/: ci.yml
_shared/: pyproject.toml  requirements.txt
_shared/src/shared_utils/: __init__.py  conan_helper.py
_shared/test/unit/: test_conan_helper.py
build-system/cpp-cmake-conan/: build.py  build.sh  install_dependencies.sh  install_deps.py  requirements.txt
build-system/cpp-cmake-conan/cmake/: aarch64_to_x86_64.cmake
build-system/cpp-cmake-conan/install/: build.sh  install_dependencies.sh
build-system/cpp-cmake-conan/src/: build.py  build.sh  install_dependencies.sh  install_deps.py  utils.py
build-system/cpp-cmake-conan/test/: requirements.txt
build-system/cpp-cmake-conan/test/integration/: conftest.py  test_integration_cpp.py  test_integration_python.py
build-system/cpp-cmake-conan/test/integration/data/cpp/minimal_project/: .velocitas.json  CMakeLists.txt  conanfile.txt  main.cpp
build-system/cpp-cmake-conan/test/unit/: test_dummy.py
components/conan-setup/src/: run.py
conan-setup/: README.md  requirements.txt
conan-setup/src/: run.py
grpc-interface-support/: README.md  requirements.txt
grpc-interface-support/data/templates/cpp/: CMakeLists.txt  ServiceImpl.cpp  ServiceImpl.h  ServiceNameServiceClientFactory.cc  ServiceNameServiceClientFactory.h  ServiceNameServiceServerFactory.cc  ServiceNameServiceServerFactory.h  conanfile.py
grpc-interface-support/data/templates/python/: ServiceImpl.py  ServiceNameServiceClientFactory.py  ServiceNameServiceServerFactory.py  pyproject.toml
grpc-interface-support/src/: conan_helper.py  cpp.py  generator.py  main.py  proto.py  python.py
grpc-interface-support/src/util/: __init__.py  templates.py
grpc-interface-support/templates/cpp/: CMakeLists.txt  ServiceImpl.cpp  ServiceImpl.h  ServiceNameServiceClientFactory.cc  ServiceNameServiceClientFactory.h  ServiceNameServiceFactory.h  ServiceNameServiceServerFactory.cc  conanfile.py
grpc-interface-support/templates/python/: ServiceNameServiceClientFactory.py
grpc-interface-support/test/: requirements.txt
grpc-interface-support/test/integration/: conftest.py  test_integration_cpp.py  test_integration_python.py
grpc-interface-support/test/unit/: test_conan_helper.py  test_proto.py
model-generator/src/: generate_model.py  install_deps.py
model-generator/test/: test_download_vspec.py
sdk-installer/: README.md  requirements.txt
sdk-installer/src/: run.py
sdk-installer/test/: requirements.txt
sdk-installer/test/integration/: conftest.py  test_integration_cpp.py  test_integration_python.py
sdk-installer/test/unit/: test_run.py
setup/: README.md  requirements.txt
setup/src/common/scripts/: configure-codespaces.sh  onCreateCommand.sh  postStartCommand.sh  setup-git.sh  upgrade-cli.sh
setup/src/cpp/common/: Dockerfile  devcontainer.json
setup/src/nodeRed/: Dockerfile  flows.json
setup/src/python/common/: Dockerfile  devcontainer.json
setup/test/: requirements.txt
setup/test/integration/: conftest.py  test_integration.py
setup/test/unit/: test_dummy.py
src/cpp/common/: Dockerfile  devcontainer.json
src/cpp/common/scripts/: post-create.sh  (+2 more)
src/python/common/: devcontainer.json
test/common/: AppManifest.json
test/cpp/: .velocitas.json
test/cpp/app_seat_service_client/: SampleApp.cpp  SampleApp.h
test/integration/: test_poststart.py
test/python/: .velocitas.json
vehicle-model-lifecycle/: README.md  requirements.txt  vss_rel_4.0.json
vehicle-model-lifecycle/src/: download_vspec.py  generate_model.py  install_deps.py  requirements.txt
vehicle-model-lifecycle/test/: requirements.txt  test_download_vspec.py  test_generate_model.py  test_lib.py
vehicle-model-lifecycle/test/integration/: conftest.py  test_integration.py
vehicle-model-lifecycle/test/unit/: conftest.py  test_download_vspec.py  test_generate_model.py  test_lib.py
(+39 files in other folders)
