[project]
name = "shared_utils"
description = "Shared utilities for Velocitas toolchain components."
dynamic = ["version", "dependencies"]
requires-python = ">= 3.10"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"
